[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/sensors/touch_sensor.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[node name="TouchSensor" type="Spatial"]
script = ExtResource( 1 )

[node name="SensorArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62089, 0 )
collision_layer = 0
collision_mask = 66
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="SensorArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.659592, -2.88317e-08 )
shape = SubResource( 1 )

[connection signal="body_entered" from="SensorArea" to="." method="_on_SensorArea_body_entered"]
[connection signal="body_exited" from="SensorArea" to="." method="_on_SensorArea_body_exited"]
